--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,7 +24,8 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y python3-tk xvfb
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          # Add any required pip packages below
+          # pip install numpy pillow
 
       - name: Run Tkinter script
         run: |
