--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,7 +26,7 @@ jobs:
           python -m pip install --upgrade pip
           # Add any required pip packages below
           pip install numpy pillow
-          pip install paho-mqtt tkinter
+          pip install paho-mqtt
 
       - name: Run Tkinter script
         run: |
